--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Bags</a>
+                    <a class="nav-link" href="#Bags">Bags</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contact_us</a>
@@ -121,6 +121,102 @@
 
         </div>
 
+
+    </div>
+    <div class="container shoes" id="shoes">
+        <h3> Shoes</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Supply 350</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h3>$120</h3>
+                  <button class="buy-now-button">Buy Now</button>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted"></small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Nike 320</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <h3>$320</h3>
+                  <button class="buy-now-button">Buy Now</button>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted"></small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Air-Max</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <h3>$350</h3>
+                  <button class="buy-now-button">Buy Now</button>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted"></small>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <div class="container Bags" id="Bags">
+        <h3>Bags</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">RED</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h3>$100</h3>
+                  <button class="buy-now-button">Buy Now</button>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted"></small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blue</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <h3>$200</h3>
+                  <button class="buy-now-button">Buy Now</button>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted"></small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Black</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <h3>$300</h3>
+                  <button class="buy-now-button">Buy Now</button>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted"></small>
+                </div>
+              </div>
+            </div>
+          </div>
 
     </div>
 
