--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="#Bags">Bags</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact_us</a>
+                    <a class="nav-link" href="#Contact_us">Contact_us</a>
                   
                   </li>
                 </ul>
@@ -219,6 +219,22 @@
           </div>
 
     </div>
+    <div class="container d-flex align-items-center d-flex justify-content-center bg" id="Contact_us">
+      <div>
+        <h1>LET'S Keep In Touch</h1>
+        <h6>
+          Get update about our new products
+        </h6>
+        <input class="form-control" type="text" name="Phone" value="Phone">
+        <button type="submit" class="buy-now-button">Contact_us</button>
+
+
+      </div>
+      
+    </div>
+    <footer>
+      <small>© copy-right Panda_commerce 2021</small>
+    </footer>
 
 
 
